--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,18 @@ header nav {}
 
 header nav ul {}
 
-header nav ul li {}
+header nav ul li {
+    list-style: none;
+}
 
-header nav ul li a {}
+header nav ul li a {
+    text-decoration: none;
+    color: #000;
+    line-height: 30px;
+    background-color: rgb(255, 255, 255);
+    padding: 20px;
+    font-weight: 500;
+}
 
 main {}
 
