--- a/css/style.css
+++ b/css/style.css
@@ -4,34 +4,23 @@ body {
     font-size: 16px;
 }
 
-header {}
-
-header nav {}
-
-header nav ul {
-    position: fixed;
-    min-width: 100%;
-    text-align: center;
+header div.container {
+    background-color: #fff;
+    margin: 40px 50px 10px 50px;
 }
 
-header nav ul li {
-    list-style: none;
-    display: inline-block;
+header div.container img.coluna-esquerda {
+    margin: 30px 0px 30px 100px;
+    border-radius: 50%;
+    width: 300px;
 }
 
-header nav ul li a {
-    text-decoration: none;
-    text-align: center;
-    color: #000;
-    line-height: 30px;
-    background-color: rgb(255, 255, 255);
-    padding: 20px;
-    font-weight: 500;
+header div.coluna-direita {
+    position: absolute;
+    width: 50%;
+    top: 100px;
+    left: 560px;
 }
-
-header img {}
-
-main {}
 
 main h1 {
     font-family: sans-serif;
@@ -42,15 +31,3 @@ main h1 {
 main p {
     font-family: monospace;
 }
-
-main h2 {}
-
-main h3 {}
-
-main ul {}
-
-main ul li {}
-
-footer {}
-
-footer a {}
