--- a/portfolio-docs/css/style.css
+++ b/portfolio-docs/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(0deg, rgb(0, 71, 148), rgb(255, 255, 255));
+    background: aliceblue;
     font-family: arial, helvetica, sans-serif;
     font-size: 16px;
 }
